--- a/MobileEstimatorApp/Droid/MobileEstimatorApp.Droid.csproj
+++ b/MobileEstimatorApp/Droid/MobileEstimatorApp.Droid.csproj
@@ -81,6 +81,27 @@
     <Reference Include="Xamarin.Forms.Xaml">
       <HintPath>..\packages\Xamarin.Forms.2.3.4.224\lib\MonoAndroid10\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
+    <Reference Include="Plugin.CurrentActivity">
+      <HintPath>..\packages\Plugin.CurrentActivity.1.0.1\lib\MonoAndroid10\Plugin.CurrentActivity.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.Permissions.Abstractions">
+      <HintPath>..\packages\Plugin.Permissions.1.2.1\lib\MonoAndroid10\Plugin.Permissions.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.Permissions">
+      <HintPath>..\packages\Plugin.Permissions.1.2.1\lib\MonoAndroid10\Plugin.Permissions.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.Media.Abstractions">
+      <HintPath>..\packages\Xam.Plugin.Media.2.6.2\lib\MonoAndroid10\Plugin.Media.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.Media">
+      <HintPath>..\packages\Xam.Plugin.Media.2.6.2\lib\MonoAndroid10\Plugin.Media.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\netstandard1.3\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MobileEstimatorApp\MobileEstimatorApp.csproj">
@@ -92,6 +113,17 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MainApplication.cs" />
+    <Compile Include="DependencyService\ImplementXCrossCropImage.cs" />
+    <Compile Include="ImageCropping\Util.cs" />
+    <Compile Include="ImageCropping\RotateBitmap.cs" />
+    <Compile Include="ImageCropping\MonitoredActivity.cs" />
+    <Compile Include="ImageCropping\ImageViewTouchBase.cs" />
+    <Compile Include="ImageCropping\HighlightView.cs" />
+    <Compile Include="ImageCropping\Extensions.cs" />
+    <Compile Include="ImageCropping\CropImageView.cs" />
+    <Compile Include="ImageCropping\CropImage.cs" />
+    <Compile Include="ImageCropping\BackgroundJob.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -107,6 +139,30 @@
     <AndroidResource Include="Resources\drawable-hdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable\avatarThree.png" />
+    <AndroidResource Include="Resources\drawable\descriptionFive.png" />
+    <AndroidResource Include="Resources\drawable\descriptionsOne.png" />
+    <AndroidResource Include="Resources\drawable\estimationOne.png" />
+    <AndroidResource Include="Resources\drawable\estimationThree.png" />
+    <AndroidResource Include="Resources\drawable\estimationTwo.png" />
+    <AndroidResource Include="Resources\drawable\historyOne.png" />
+    <AndroidResource Include="Resources\drawable\historyTwo.png" />
+    <AndroidResource Include="Resources\drawable\imageOne.png" />
+    <AndroidResource Include="Resources\drawable\picturesOne.png" />
+    <AndroidResource Include="Resources\drawable\picturesThree.png" />
+    <AndroidResource Include="Resources\drawable\picturesTwo.png" />
+    <AndroidResource Include="Resources\drawable\profileOne.png" />
+    <AndroidResource Include="Resources\drawable\repairFive.png" />
+    <AndroidResource Include="Resources\drawable\repairOne.png" />
+    <AndroidResource Include="Resources\drawable\repairTwo.png" />
+    <AndroidResource Include="Resources\drawable\settingsOne.png" />
+    <AndroidResource Include="Resources\drawable\camera_crop_height.png" />
+    <AndroidResource Include="Resources\drawable\camera_crop_width.png" />
+    <AndroidResource Include="Resources\layout\cropimage.axml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DependencyService\" />
+    <Folder Include="ImageCropping\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
